<resources>
    <string name="app_name">Hunger Warrior</string>


    <string name="facebook_application_id">1915111812034075</string>
    <string name="fb_login_protocol_scheme">fb1915111812034075</string>
    <string name="facebook_client_token">42037062d911e5f68a5aff5c62b873f2</string>

    <string name="food_name">Food Name</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="image_of_food">Image of food</string>
    <string name="search_foods">Search Foods...</string>
    <string name="foods">Foods</string>
    <string name="order">order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="place_order">Place Order</string>
    <string name="cart">Cart</string>
    <string name="clear_cart">clear cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="order_type">Order Type</string>
    <string name="payment_type">payment Type</string>
    <string name="pick_up">Pick up</string>
    <string name="delivery">Delivery</string>
    <string name="button_cart_continue">Continue</string>
    <string name="orders">My Orders</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="completed">Completed</string>
    <string name="preparing">Preparing</string>

    <string name="pending_orders">New Orders</string>
    <string name="cancelled_orders">Cancelled Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="preparing_orders">Being Prepared</string>
    <string name="x">x</string>
    <string name="order_id">Order id:</string>
    <string name="item_id">item id:</string>
</resources>